# redvsblue

./: .env.example  .gitignore  CLAUDE.md  README.md  REVIEWS.md  pyproject.toml  workplan.md
.github/workflows/: deploy-site.yml  publish.yml  validate.yml
literature/: README.md  REVIEW.md  UNFETCHABLE.md  manifest.json
literature/_scripts/: fetch_and_extract.py  requirements.txt
literature/_templates/: NOTES_TEMPLATE.md
literature/aea-why-economy-better-under-democrats/: notes.md  source.html  source.txt
literature/belfer-2016-economy-better-democrats/: notes.md  source.html  source.txt
literature/belfer-frankel-2024-historical-puzzle/: notes.md  source.html  source.txt
literature/blinder-watson-2014-presidents-us-economy/: notes.md  source.txt
notes/: README.md  analysis_rationale_and_findings.md  publication_runbook.md
rb/: cli.py  congress_control.py  final_report.py  inference.py  ingest.py  metrics.py  narrative.py  net.py  randomization.py  regimes.py  scoreboard.py  site.py  validate.py
rb/sources/: datahub.py  (+5 more)
reviews/: README.md  chatgpt_v4_review.txt  claude_metrics_methodology_v3_suite_review.txt  codex_metrics_methodology_v3_suite_review.md  gemini_metrics_methodology_v3_suite_review.txt  gemini_v4_review.txt  prompt_metrics_methodology_v3_suite.txt
site/: data.json  index.html
spec/: README.md  metrics_ci_smoke.yaml  metrics_ci_smoke_nonfred.yaml  metrics_coverage_v1.md  metrics_rationale.md  metrics_v1.yaml
tests/: test_datahub.py  test_final_report.py  test_randomization.py  test_scope_guards.py  test_site.py  test_validate.py
(+32 files in other folders)
