[project]
name = "rb"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.1.4",
    "pdfminer-six>=20260107",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[project.scripts]
rb = "rb.cli:main"

[tool.uv]
# Make `uv sync` install this project (and its entrypoints) into `.venv/`.
package = true

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["rb*"]
